first pass of mvp.... self high five

--- a/home.html
+++ b/home.html
@@ -58,12 +58,15 @@
 
 issues - 
 
+for presentation - send heroku url link to everyone in class so they can play on their phone.
+
 one extra click is required to register you've run out of clicks. ie. the counter says 0 and yet you need to click once more to get the welcome message back
 
 logic is broken once lives is 0 - message still begins with wise deciosn. need control flow in code to say if lives = 0 say another message.
 
 when you run out of lives display a new message and allso make scoreboard float intomiddle of screen
 
+fix styling on welcoem message. 
 
 
                     __          __                              
@@ -76,24 +79,16 @@ when you run out of lives display a new message and allso make scoreboard float 
 
 2. game logic - add the score and level completed to an array/obj where it can 
 
-3. add a toggle which displays the grid size selector.
 
 1 - user flow
 
-
-  c) if player runs out of clicks in turn, a live is lost. after 3 lives lost the game is over and the playername, score and level are logged onto a scoreaboard. consider animation. and responsive design here.
-
-  c2) if a player wins then log the clicks remaining and add it to a score variable so you can compare against P2. then reset to welcome screeen
-
-  d) welcome screen pops up ready for game to begin again.
-
 add a drop down instruction menu style UI. use slideTOggle
-add dropdown menu for grid sizes
+consider UI for welcome screen - should resize on smaller screen.
 these dd menus should resize for mobile view
+welcome screen message animations
+scorebaord animations.
 
 4. animation, sounds and styling:
-  a.when hasWon is true (ie when you;ve won) make all the squares in the grid flash.
-  b) when you win a message cascades across screen and then fades out
   c) consider other animations based on flow of how user would interact.
   sounds short click on mouse hover.
   sound for win.
