ready for pre final heroku deployment. boom

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
 
   </div>
 
-  <div id="reset">click to reset</div><br><br>
+  <div id="reset">reset/change level</div><br><br>
   
 
   <div id="instructions"><h3 id="howtoplay">how to play</h3><br><p id="howtoplaytext">the <strong>aim of the game</strong> is to turn the board from red to green by pressing on the lites.<br> There's a twist though - each click will toggle the clicked lite and also its adjacent lites green/red. <br>The board needs to be all green to win before you run out of clicks. <br>You have 3 lives and can reset the board if you wish but it'll cost you a life.<br><br> <span id="goodLuck">Good luck!</span></p></div><br><br><br>
