--- a/home.html
+++ b/home.html
@@ -71,34 +71,16 @@ for presentation - send heroku url link to peers via slack so anyone who wants t
                                     /_/                         
 
 
-1. move instructions div to middle of screen and then slide down to normal position and fade in the welcome message div.
 
-2. style welcome page so font color is gradient of beige and title is brighter than text etc.
+2. style welcome page so font color is gradient of beige and title is brighter than text etc. (1hr)
+3. add more colors to ambient lighting (1hr)
+4. make scoreboard smaller so is on 2 lines(30mins)
+d)monserrat font chain for backup fonts.
 
-3. on small screen size hide the instruction list after initial screen load up
-
-4. make scoreboard smaller so is on 2 lines
-
-5. reduce space between reset button and instructions on smaller screen
-
-
-
-
-
-
-
-1 - user flow
-
-these dd menus should resize for mobile view
-welcome screen message animations
-
-4. animation, sounds and styling:
-  c) consider other animations based on flow of how user would interact.
-  sounds short click on mouse hover.
-  sound for win.
-  sound for reset.
-  sound for lose
-  sound on start
-  d)monserrat font chain for backup fonts.
-
+c) consider other animations based on flow of how user would interact.
+sounds short click on mouse hover.
+sound for win.
+sound for reset.
+sound for lose
+sound on start
 -->
