fixed bug whereby remaining tiles were not counting down correctly

--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./css/app.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
@@ -30,21 +31,21 @@
 
   <div id="welcome">
     <h2 id="welcomeMessage">welcome to litesweeper</h2><br><br><br>
-    <p id="afterReset">choose a grid to sweep</p><br>
+    <p id="afterReset">choose a grid to sweep or see how to play below</p><br>
       
-    <div class= "gridSizeSelector" id ="threeBythree">3X3</div>
-    <div class= "gridSizeSelector" id ="fourByfour">4X4</div>
-    <div class= "gridSizeSelector" id ="fiveByfive">5X5</div>
-    <div class= "gridSizeSelector" id ="sixBysix">6X6</div>
-    <div class= "gridSizeSelector" id ="sevenByseven">7X7</div>
-    <div class= "gridSizeSelector" id ="eightByeight">8X8</div>
+    <div class= "gridSizeSelector" id ="threeBythree">3x3</div>
+    <div class= "gridSizeSelector" id ="fourByfour">4x4</div>
+    <div class= "gridSizeSelector" id ="fiveByfive">5x5</div>
+    <div class= "gridSizeSelector" id ="sixBysix">6x6</div>
+    <div class= "gridSizeSelector" id ="sevenByseven">7x7</div>
+    <div class= "gridSizeSelector" id ="eightByeight">8x8</div>
 
   </div>
 
   <div id="reset">reset/change level</div><br><br>
   
 
-  <div id="instructions"><h3 id="howtoplay">how to play</h3><br><p id="howtoplaytext">the <strong>aim of the game</strong> is to turn the board from red to green by pressing on the lites.<br> There's a twist though - each click will toggle the clicked lite and also its adjacent lites green/red. <br>The board needs to be all green to win before you run out of clicks. <br>You have 3 lives and can reset the board if you wish but it'll cost you a life.<br><br> <span id="goodLuck">Good luck!</span></p></div><br><br><br>
+  <div id="instructions"><h3 id="howtoplay">how to play</h3><br><p id="howtoplaytext">the <strong>aim of the game</strong> is to turn the board from red to green by pressing on the lites.<br> there's a twist though - each click will toggle the clicked lite and also its adjacent lites green/red. <br>the board needs to be all green to win before you run out of clicks. <br>you have 3 lives and can reset the board if you wish but it'll cost you a life.<br><br> <span id="goodLuck">Good luck!</span></p></div><br><br><br>
 
   <div id="playerScoreboard">...</div>
 
